[package]
name = "pipedash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
rodio = "0.16.0"
home = "0.5.4"
base64 = "0.21.0"
flate2 = "1.0.25"
gd_plist = {git = "https://github.com/Syudagye/gd-plist.git", version = "1.4.0"}
chrono = "0.4.23"
ordered-float = "3.4.0"
thiserror = "1.0.38"
reqwest = {version = "0.11.14", features = [ "blocking" ]}
urlencoding = "2.1.2"
md5 = "0.7.0"
itertools = "0.10.5"
directories = "4.0.1"
simplelog = "0.12.0"
log = "0.4.17"
mp3-duration = "0.1.10"
